# workout-runner

./: README.md  pyproject.toml
assets/data/: fonts.json  workout_data.json
assets/data/workouts/: nyt_7_mins.json  nyt_advanced.json
workout/: __main__.py  app.py  assets.py  inputs.py  load.py  progress.py  section.py  utils.py
